--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </div>
                             <div class="card-three">
                                 <label for="">Subject</label>
-                                <input type="text" placeholder="Need help regarding...">
+                                <input class="form-control" type="text" placeholder="Need help regarding...">
                             </div>
                             <div class="card-three" id="card-four">
                                 <label for="">Message <sup>*</sup></label>
